--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patricia Molnar's Portfolio</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header id="#back-to-top">
-    <h1>Patricia Molnar - Web Developer</h1>
-    <nav>
+  <header id="header">
+    <div class="header__flex">
+      <div id="burger">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <h1>Patricia Molnar's Portfolio</h1>
+    </div>
+    <nav id="nav">
       <ul>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#skills">Skills</a></li>
@@ -19,18 +27,21 @@
       </ul>
     </nav>
     <div class="hero">
-      <p>Patricia Molnar</p>
-      <h2>Full Stack Web Developer</h2>
-      <p>HTML, CSS & SASS, JavaScript, React, Node, Express, MongoDB, PHP, mySQL, ...</p>
-      <a href="#portfolio">Portfolio</a>
+      <div class="hero__background"></div>
+      <div class="hero__text">
+        <p class="hero__name">Patricia Molnar</p>
+        <h2 class="hero__title">Full Stack Web Developer</h2>
+        <p class="hero__lan">HTML, CSS & SASS, JavaScript, React, Node, Express, MongoDB, PHP, mySQL, ...</p>
+        <a href="#portfolio">Portfolio</a>
+      </div>
     </div>
   </header>
-
+  <svg id="divider-1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 49"><polygon class="cls-1" points="0 49 0 0 245 29 381 0 500 24 500 49 0 49"/></svg>
   <main>
-    <section id="portfolio">
+    <section id="portfolio" class="portfolio">
       <h3>Portfolio</h3>
       <div class="portfolio__grid">
-        <div class="portfolio__grid-card">
+        <div class="portfolio__card">
           <h4>French Learning App</h4>
           <p>Conjugateau</p>
           <p>Stack used: React, Node, Express & MongoDB</p>
@@ -49,7 +60,7 @@
           <a href="#">View Source Code</a>
         </div>
 
-        <div class="portfolio__grid-card">
+        <div class="portfolio__card">
           <h4>Asteroid Tracker</h4>
           <p>Stack used: Node, Express for backend, Vanilla JavaScript, CSS and HTML for frontend</p>
           <p>Purpose: See how many Nearth Earth Objects (NEOs) are orbiting the Earth</p>
@@ -182,5 +193,9 @@
       <a href="">Instagram</a>
     </div>
   </footer>
+
+  <script src="js/script.js"></script>
+
 </body>
 </html>
+
